corrected gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ img {
     height: auto;
 }
 
-.visually-hidden {
+.visually-hidden{
     position: absolute;
     width: 1px;
     height: 1px;
@@ -281,7 +281,7 @@ body {
 .benefits-list {
     --items: 4;
     --indent-row: 24px;
-    --indent-col: 18px;
+    --indent-col: 24px;
 }
 
 .benefits-list .item-heading {
@@ -293,7 +293,7 @@ body {
 .skills-list {
     --items: 3;
     --indent-row: 24px;
-    --indent-col: 18px;
+    --indent-col: 24px;
 }
 
 
@@ -312,7 +312,7 @@ body {
 .teammate-list {
     --items: 4;
     --indent-row: 24px;
-    --indent-col: 18px;
+    --indent-col: 24px;
 }
 
 
@@ -394,19 +394,25 @@ body {
     margin-bottom: 72px;
 }
 
-.portfolio-list {
-    --items: 4;
-    /* ??????????????????????????? */
+/* .portfolio-list {
+    --items: 3;
     --indent-row: 48px;
-    --indent-col: 24x;
+    --indent-col: 24px;
+} */
+
+.portfolio-list{
+    column-gap: 24px;
+    row-gap: 48px;;
 }
 
 .portfolio-item {
-    border: 1px solid #E7E9FC;
+    width: calc((100% - 48px) / 3);
+    /* border: 1px solid #E7E9FC; */
 }
 
 .portfolio-text-container {
     padding: 32px 16px;
+    border:1px solid #e7e9fc;
 }
 
 .portfolio-text-container .item-heading {
